CSS: channel and channel messages correct alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,10 +14,35 @@
  *= require_self
  */
 
-.channel__messages {
-  overflow-y: auto;
+body {
+  margin: 0;
 }
 
-.channel__message_author_ip {
+.channel {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.channel-messages {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow-y: auto;
+  width: 100%;
+}
+
+.channel-message {
+  &:first-child {
+    margin-top: auto;
+  }
+}
+
+.channel-message-author-ip {
   font-weight: bold;
+}
+
+.channel-message-form {
+  align-self: flex-end;
+  width: 100%;
 }
